<resources>
    <string name="app_name">MyGamesMultimodule</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="search">Search</string>
    <string name="games_for_you">Games for you</string>
    <string name="released_date">Released Date %s</string>
    <string name="played">%s Played</string>
    <string name="home">Home</string>
    <string name="favorite">Favorite</string>
    <string name="count_found_game">Search %s Games</string>
    <string name="games_not_found">Games Not Found </string>
    <string name="favorite_not_found">Favorite Not Found </string>
    <string name="back_button">Back button</string>
    <string name="success_add_to_favorite">Success Add to Favorite</string>
    <string name="success_delete_to_favorite">Success Delete from Favorite</string>
</resources>